CU-8685z4x38 Fixing bugs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app>
   <ion-split-pane contentId="menu-content" when="false">
-    <ion-menu contentId="menu-content" class="app-sidemenu" (ionWillOpen)="menuOpened()">
+    <ion-menu contentId="menu-content" class="app-sidemenu" (ionWillOpen)="menuOpened()" menuId="main-menu">
       <ion-header>
         <ion-toolbar class="menuHeader">
           <ion-row class="user-details-wrapper">
