--- a/src/app/features/home/pages/walkthrough/walkthrough.page.html
+++ b/src/app/features/home/pages/walkthrough/walkthrough.page.html
@@ -116,7 +116,7 @@
               </div>
             </ion-col>
             <ion-col class="call-to-actions-wrapper">
-              <ion-button class="get-started-button" expand="block" [routerLink]="['/settings']">Login Now</ion-button>
+              <ion-button class="get-started-button" expand="block" (click)="goToSettings()">Login Now</ion-button>
               <ion-row class="alt-call-to-action-row">
                 <span class="cta-leading-text"></span>
               </ion-row>
