--- a/src/app/features/home/pages/calls/calls.page.html
+++ b/src/app/features/home/pages/calls/calls.page.html
@@ -16,7 +16,7 @@
     <app-call-card [call]="call.Call" [priority]="call.CallPriority" *ngFor="let call of filterCalls((callsState$ | async).activeCalls)" (click)="viewCall(call.Call.CallId)"></app-call-card>
   </ion-list>
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" [hidden]="!canCreateCall()">
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="canCreateCall()">
     <ion-fab-button (click)="newCall()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
