CU-8685z4x38 minor cleanup

--- a/src/app/features/calls/pages/edit-call/edit-call.page.html
+++ b/src/app/features/calls/pages/edit-call/edit-call.page.html
@@ -48,7 +48,7 @@
     <ion-list-header> {{'editCallPage.locationHeader' | translate}} </ion-list-header>
     <ion-item>
       <div padding>
-        <ion-segment [(ngModel)]="locationType">
+        <ion-segment [(ngModel)]="locationType" [scrollable]="true">
           <ion-segment-button value="address">
             Address
           </ion-segment-button>
