--- a/src/app/components/call-card/call-card.component.scss
+++ b/src/app/components/call-card/call-card.component.scss
@@ -2,6 +2,7 @@
   width: 94%;
   margin-top: 20px;
   margin-left: 10px;
+  margin-right: 10px;
   box-shadow: 0px 0px 10px 0px grey;
   border-radius: 5px;
   overflow: hidden;
