--- a/src/app/features/notes/pages/notes-list/notes-list.page.html
+++ b/src/app/features/notes/pages/notes-list/notes-list.page.html
@@ -13,6 +13,12 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
   <ion-list *ngIf="(notesState$ | async).notes && (notesState$ | async).notes.length > 0">
-    <app-note-card [note]="note" *ngFor="let note of filterNotes((notesState$ | async).notes)"></app-note-card>
+    <app-note-card [note]="note" *ngFor="let note of filterNotes((notesState$ | async).notes)" (click)="viewNote(note)"></app-note-card>
   </ion-list>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" [hidden]="!canCreateNote()">
+    <ion-fab-button (click)="newNote()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
