CU-8685z4x38 disabling setting clear cache button

--- a/src/app/features/settings/pages/settings/settings.page.html
+++ b/src/app/features/settings/pages/settings/settings.page.html
@@ -124,7 +124,7 @@
               <p>{{'settingsPage.aboutText' | translate}}</p>
             </ion-label>
           </ion-item>
-          <ion-item lines="none" (click)="clearCache()">
+          <!--<ion-item lines="none" (click)="clearCache()">
             <ion-avatar slot="start" class="gray-bg">
               <ion-icon name="trash-outline"></ion-icon>
             </ion-avatar>
@@ -132,7 +132,7 @@
               <h2>{{'settingsPage.clearCacheLabel' | translate}}</h2>
               <p>{{'settingsPage.clearCacheText' | translate}}</p>
             </ion-label>
-          </ion-item>
+          </ion-item>-->
         </ion-list>
       </ion-col>
     </ion-row>
