--- a/src/app/features/units/pages/view-unit/view-unit.page.html
+++ b/src/app/features/units/pages/view-unit/view-unit.page.html
@@ -25,7 +25,7 @@
       </ion-row>
       <ion-row class="actions-row">
         <ion-col class="main-actions">
-          <ion-button class="call-to-action-btn" size="small" color="medium">{{ 'viewPersonPage.message' | translate }}</ion-button>
+          <!--<ion-button class="call-to-action-btn" size="small" color="medium">{{ 'viewPersonPage.message' | translate }}</ion-button>-->
         </ion-col>
         <ion-col class="secondary-actions">
           <ion-button class="more-btn" size="small" fill="clear" color="medium">
