--- a/src/app/components/person-card/person-card.component.html
+++ b/src/app/components/person-card/person-card.component.html
@@ -15,20 +15,20 @@
   </ion-row>
   <ion-row style="padding: 10px; border-bottom: 1px solid lightgray;">
     <ion-col size="6">
-      <ion-label class="person-roles">
-        Staffing
-      </ion-label>
-      <ion-label class="person-name" [style.color]="person?.StaffingColor">{{person?.Staffing}}</ion-label>
-      <ion-label class="date-time">{{getDate(person?.StaffingTimestamp)}}</ion-label>
-      <ion-label class="date-time">{{getTimeago(person?.StaffingTimestamp)}}</ion-label>
-    </ion-col>
-    <ion-col size="6">
-      <ion-label class="person-roles">
+      <ion-label class="person-status">
         Status
       </ion-label>
-      <ion-label class="person-name" [style.color]="person?.StatusColor">{{person?.Status}}</ion-label>
+      <ion-label class="person-statustext" [style.color]="adjustColor(person?.StatusColor)">{{person?.Status}}</ion-label>
       <ion-label class="date-time">{{getDate(person?.StatusTimestamp)}}</ion-label>
       <ion-label class="date-time">{{getTimeago(person?.StatusTimestamp)}}</ion-label>
+    </ion-col>
+    <ion-col size="6">
+      <ion-label class="person-status">
+        Staffing
+      </ion-label>
+      <ion-label class="person-statustext" [style.color]="adjustColor(person?.StaffingColor)">{{person?.Staffing}}</ion-label>
+      <ion-label class="date-time">{{getDate(person?.StaffingTimestamp)}}</ion-label>
+      <ion-label class="date-time">{{getTimeago(person?.StaffingTimestamp)}}</ion-label>
     </ion-col>
   </ion-row>
 </div>
