--- a/src/app/components/units-card/units-card.component.html
+++ b/src/app/components/units-card/units-card.component.html
@@ -1,28 +1,26 @@
 <div class="bookings">
   <ion-row style="padding-bottom: 10px; border-bottom: 1px solid lightgray;">
     <ion-col size="12">
-      <ion-label class="person-name">{{unit.Name}}</ion-label>
-      <ion-label class="person-roles">
+      <ion-label class="unit-name">{{unit.Name}}</ion-label>
+      <ion-label class="unit-roles">
         {{unit.Type}}
       </ion-label>
-      <ion-label class="person-group">
+      <ion-label class="unit-group">
         {{unit.GroupName}}
       </ion-label>
     </ion-col>
   </ion-row>
   <ion-row style="padding: 10px; border-bottom: 1px solid lightgray;">
     <ion-col size="6">
-      <ion-label class="person-roles">
-        Staffing
-      </ion-label>
-    </ion-col>
-    <ion-col size="6">
-      <ion-label class="person-roles">
+      <ion-label class="unit-statusheader">
         Status
       </ion-label>
-      <ion-label class="person-name" [style.color]="unit.CurrentStatusColor">{{unit.CurrentStatus}}</ion-label>
+      <ion-label class="unit-status" [style.color]="unit.CurrentStatusColor">{{unit.CurrentStatus}}</ion-label>
       <ion-label class="date-time">{{getDate(unit.CurrentStatusTimestampUtc)}}</ion-label>
       <ion-label class="date-time">{{getTimeago(unit.CurrentStatusTimestampUtc)}}</ion-label>
+    </ion-col>
+    <ion-col size="6">
+
     </ion-col>
   </ion-row>
 </div>
