--- a/src/app/components/call-card/call-card.component.html
+++ b/src/app/components/call-card/call-card.component.html
@@ -1,24 +1,28 @@
 <div class="bookings">
-  <ion-row style="padding-bottom: 10px; border-bottom: 1px solid lightgray;">
-    <ion-col size="10">
-      <ion-label class="call-name">{{ call?.Name }}</ion-label>
-      <ion-label class="call-nature" [innerHtml]="call?.Nature">
+  <ion-row>
+    <ion-col size="2">
+      <ion-label class="call-number">
+        {{ call?.Number }}
       </ion-label>
     </ion-col>
-    <ion-col size="2">
-      <ion-label class="call-number" style="float:right;">
-        {{ call?.Number }}
+    <ion-col size="10">
+      <ion-label class="call-name">{{ call?.Name }}</ion-label>
+    </ion-col>
+  </ion-row>
+  <ion-row style="padding-bottom: 10px; border-bottom: 1px solid lightgray;">
+    <ion-col size="11">
+      <ion-label class="call-nature" [innerHtml]="call?.Nature">
       </ion-label>
     </ion-col>
   </ion-row>
   <ion-row style="padding: 10px; border-bottom: 1px solid lightgray;">
     <ion-col size="6">
-      <ion-label class="call-address">{{ call?.Address }}</ion-label>
+      <ion-label class="call-priority" [style.color]="getColor()">{{getPriorityName()}}</ion-label>
+      <ion-label class="call-date-time">{{ getDate(call?.LoggedOn) }}</ion-label>
+      <ion-label class="call-date-time">{{ call?.LoggedOnUtc | rgTimeAgoUtc }}</ion-label>
     </ion-col>
     <ion-col size="6">
-      <ion-label class="call-priority" [style.color]="getColor()">{{getPriorityName()}}</ion-label>
-      <ion-label class="date-time">{{ getDate(call?.LoggedOn) }}</ion-label>
-      <ion-label class="date-time">{{ call?.LoggedOnUtc | rgTimeAgoUtc }}</ion-label>
+      <ion-label class="call-address">{{ call?.Address }}</ion-label>
     </ion-col>
   </ion-row>
 </div>
