CU-8688ucrbp minor updates.

--- a/src/app/features/settings/modals/about/modal-about.page.html
+++ b/src/app/features/settings/modals/about/modal-about.page.html
@@ -4,7 +4,7 @@
       <ion-icon name="close-outline"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-  <div class="container safe-area">
+  <div class="container ion-padding the-form" style="padding-top: 40px;">
     <ion-grid style="margin-left: 10px; margin-right: 10px;">
       <ion-row>
         <ion-col>
