--- a/src/app/features/settings/modals/serverInfo/modal-serverInfo.page.html
+++ b/src/app/features/settings/modals/serverInfo/modal-serverInfo.page.html
@@ -4,11 +4,12 @@
       <ion-icon name="close-outline"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-  <div class="container ion-padding the-form">
+  <div class="container ion-padding the-form" style="padding-top: 40px;">
     <ion-grid style="margin-left: 10px; margin-right: 10px;">
       <ion-row class="ion-padding-top">
         <ion-col>
-          The default server address is https://api.resgrid.com and should be unchanged unless you are using a custom server.
+          The default server address is https://api.resgrid.com and should be unchanged unless you are using a custom
+          server.
         </ion-col>
       </ion-row>
       <ion-row>
@@ -20,13 +21,16 @@
                 <ion-input formControlName="serverAddress"></ion-input>
               </ion-item>
             </div>
-            <div class="errors-container" *ngIf="serverForm.get('serverAddress').invalid && (serverForm.get('serverAddress').dirty || serverForm.get('serverAddress').touched)">
-              <ng-container *ngIf="serverForm.get('serverAddress').errors.required">Server Address is required</ng-container>
+            <div class="errors-container"
+              *ngIf="serverForm.get('serverAddress').invalid && (serverForm.get('serverAddress').dirty || serverForm.get('serverAddress').touched)">
+              <ng-container *ngIf="serverForm.get('serverAddress').errors.required">Server Address is
+                required</ng-container>
               <ng-container *ngIf="serverForm.get('serverAddress').errors.invalidUrl">
                 {{serverForm.get('serverAddress').errors.message}}
               </ng-container>
             </div>
-            <ion-button [disabled]="serverForm.invalid" class="action-button" expand="block" fill="solid" color="primary" type="submit">
+            <ion-button [disabled]="serverForm.invalid" class="action-button" expand="block" fill="solid"
+              color="primary" type="submit">
               <span>Set Server and Validate</span>
             </ion-button>
           </form>
