--- a/src/app/features/settings/pages/settings/settings.page.html
+++ b/src/app/features/settings/pages/settings/settings.page.html
@@ -60,8 +60,8 @@
               <h2>{{'settingsPage.darkThemeLabel' | translate}}</h2>
               <p>{{'settingsPage.darkThemeText' | translate}}</p>
             </ion-label>
-            <ion-select item-end placeholder="Default" (ngModelChange)="setPerferDarkMode($event)" [(ngModel)]="themePreference">
-              <ion-select-option value="-1">Default</ion-select-option>
+            <ion-select slot="end" padding placeholder="Default" (ngModelChange)="setPerferDarkMode($event)" [(ngModel)]="themePreference">
+              <ion-select-option value="-1">System</ion-select-option>
               <ion-select-option value="0">Light</ion-select-option>
               <ion-select-option value="1">Dark</ion-select-option>
             </ion-select>
@@ -74,7 +74,7 @@
               <h2>{{'settingsPage.keepActiveLabel' | translate}}</h2>
               <p>{{'settingsPage.keepActiveText' | translate}}</p>
             </ion-label>
-            <ion-toggle item-end color="primary" [checked]="keepAlive$ | async" (ionChange)="setKeepAlive($event)"></ion-toggle>
+            <ion-toggle slot="end" padding color="primary" [checked]="keepAlive$ | async" (ionChange)="setKeepAlive($event)"></ion-toggle>
           </ion-item>
           <ion-item lines="none">
             <ion-avatar slot="start" class="green-bg">
@@ -84,7 +84,7 @@
               <h2>{{'settingsPage.locationUpdatesLabel' | translate}}</h2>
               <p>{{'settingsPage.locationUpdatesText' | translate}}</p>
             </ion-label>
-            <ion-toggle item-end color="primary" [checked]="realtimeGeolocationEnabled$ | async" (ionChange)="setSendLocationUpdates($event)"></ion-toggle>
+            <ion-toggle slot="end" padding color="primary" [checked]="realtimeGeolocationEnabled$ | async" (ionChange)="setSendLocationUpdates($event)"></ion-toggle>
           </ion-item>
           <ion-item lines="none">
             <ion-avatar slot="start" class="red-bg">
@@ -94,7 +94,7 @@
               <h2>{{'settingsPage.backgroundGeolocationLabel' | translate}}</h2>
               <p>{{'settingsPage.backgroundGeolocationText' | translate}}</p>
             </ion-label>
-            <ion-toggle item-end color="primary" [checked]="backgroundGeolocationEnabled$ | async" (ionChange)="setBackgroundGeolocation($event)"></ion-toggle>
+            <ion-toggle slot="end" padding color="primary" [checked]="backgroundGeolocationEnabled$ | async" (ionChange)="setBackgroundGeolocation($event)"></ion-toggle>
           </ion-item>
           <ion-item lines="none" *ngIf="(settingsState$ | async).loggedIn">
             <ion-avatar slot="start" class="gray-bg">
@@ -104,7 +104,7 @@
               <h2>{{'settingsPage.pushNotificationsLabel' | translate}}</h2>
               <p>{{'settingsPage.pushNotificationsText' | translate}}</p>
             </ion-label>
-            <ion-toggle item-end color="primary" [checked]="pushNotificationEnabled$ | async" (ionChange)="setPushNotification($event)"></ion-toggle>
+            <ion-toggle slot="end" padding color="primary" [checked]="pushNotificationEnabled$ | async" (ionChange)="setPushNotification($event)"></ion-toggle>
           </ion-item>
         </ion-list>
       </ion-col>
