CU-8689cupyv updating for Android 34 and iOS

--- a/src/app/features/settings/modals/about/modal-about.page.html
+++ b/src/app/features/settings/modals/about/modal-about.page.html
@@ -1,10 +1,10 @@
-<ion-content [fullscreen]="true">
+<ion-content padding>
   <ion-fab vertical="top" horizontal="end" slot="fixed">
     <ion-fab-button size="small" color="light" (click)="dismissModal()">
       <ion-icon name="close-outline"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-  <div class="container ion-padding the-form" style="padding-top: 40px;">
+  <div class="container ion-padding the-form" style="padding-top: 50px;">
     <ion-grid style="margin-left: 10px; margin-right: 10px;">
       <ion-row>
         <ion-col>
