--- a/src/app/features/settings/modals/login/modal-login.page.html
+++ b/src/app/features/settings/modals/login/modal-login.page.html
@@ -1,4 +1,4 @@
-<ion-content [fullscreen]="true">
+<ion-content padding>
   <ion-fab vertical="top" horizontal="end" slot="fixed">
     <ion-fab-button
       size="small"
